--- a/package.json
+++ b/package.json
@@ -1,6 +1,24 @@
 {
   "dependencies": {
-    "express": "~4.14.0",
-    "multer": "~1.2.1"
-  }
+    "express": "^4.16.2",
+    "multer": "^1.3.0"
+  },
+  "scripts": {
+    "start": "node server.js"
+  },
+  "name": "skin-detection-server",
+  "version": "1.0.0",
+  "main": "server.js",
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Charon77/SkinDetectionServer.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/Charon77/SkinDetectionServer/issues"
+  },
+  "homepage": "https://github.com/Charon77/SkinDetectionServer#readme",
+  "description": ""
 }
